@@ -436,7 +436,6 @@ body.unscroll {
   max-width: 100%;
   height: 600px;
   max-height: 100%;
-  background: rgb(255,255,255);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4); 
   border-radius: 4px;
 }
@@ -448,7 +447,7 @@ body.unscroll {
   padding: 0;
 }
 #options fieldset {
-  border: 1px solid #DDD;
+  border: 1px solid rgb(150,150,150);
   border-radius: 3px;
 }
 #options legend {
